// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots appearance default 1`] = `
<p
  style={
    Object {
      "color": "white",
    }
  }
>
  <a
    data-css-1ud2sxh=""
    href="http://duckduckgo.com"
  >
    Click me
  </a>
</p>
`;

exports[`Storyshots appearance subtle 1`] = `
<p
  style={
    Object {
      "color": "white",
    }
  }
>
  <a
    data-css-di03rb=""
    href="http://duckduckgo.com"
  >
    Click me
  </a>
</p>
`;

exports[`Storyshots css only hover 1`] = `
<p
  style={
    Object {
      "color": "white",
    }
  }
>
  This is a css-styled anchor tag
   
  <a
    className="psds-link psds-button--2020-colors psds-link--appearance-default psds-theme--light"
    href="#"
  >
    anchor
  </a>
  .
</p>
`;

exports[`Storyshots tagNames button 1`] = `
<p
  style={
    Object {
      "color": "white",
    }
  }
>
  <button
    data-css-1ud2sxh=""
  >
    Click me
  </button>
</p>
`;
